log
Thu 20 Apr 2023 08:04:50 PM UTC: 
 tests:  1|8
total_score: 0/70
d1c5266
Thu 20 Apr 2023 08:35:34 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
a6c5e98
Thu 20 Apr 2023 08:35:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ec1cc27
Thu 20 Apr 2023 09:10:48 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  4|7
total_score: 5/70
96661a8
Thu 20 Apr 2023 09:15:51 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5035520
Thu 20 Apr 2023 09:41:32 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
96e8328
Thu 20 Apr 2023 09:42:19 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
de3aa3e
Thu 20 Apr 2023 09:44:59 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
40925af
Fri 21 Apr 2023 12:14:36 AM UTC: 
 treemap.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
 tests:  11|6
total_score: 15/70
ad93900
Fri 21 Apr 2023 12:23:36 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
8a2eb75
Fri 21 Apr 2023 12:38:23 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   58 |   TreeNode* newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
57dcf54
Fri 21 Apr 2023 12:40:31 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   58 |   TreeNode* newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d4c7478
Fri 21 Apr 2023 12:41:13 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   58 |   TreeNode* newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
54421a6
Fri 21 Apr 2023 12:56:51 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  13|5
total_score: 25/70
f395667
Fri 21 Apr 2023 01:08:09 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
e76315c
Fri 21 Apr 2023 01:29:36 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
5b2f771
Fri 21 Apr 2023 02:29:58 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
a202eba
Fri 21 Apr 2023 02:46:41 PM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  16|4
total_score: 30/70
a6b350f
Fri 21 Apr 2023 02:51:10 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  16|4
total_score: 30/70
a97f3bc
Fri 21 Apr 2023 02:54:19 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  17|4
total_score: 35/70
a7fb4ff
Fri 21 Apr 2023 04:05:40 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  18|3
total_score: 40/70
69e9c30
Sat 22 Apr 2023 04:38:17 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|0
271ef4a
Sat 22 Apr 2023 04:45:39 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  20|2
total_score: 45/70
b992c3c
Sat 22 Apr 2023 04:49:53 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
d401195
Sat 22 Apr 2023 04:55:09 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
ff14350
Sat 22 Apr 2023 05:00:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
5fd3270
Sat 22 Apr 2023 08:23:36 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:253:6: error: expected expression before ‘)’ token
  253 |   if()
      |      ^
Compilation failed
387a6c0
Sat 22 Apr 2023 08:24:07 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
4f681c8
Sat 22 Apr 2023 08:26:27 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
5b3ce71
Sat 22 Apr 2023 08:29:05 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  22|2
total_score: 50/70
f1de48c
Sat 22 Apr 2023 08:30:53 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:263:1: error: control reaches end of non-void function [-Werror=return-type]
  263 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
df25874
Sat 22 Apr 2023 09:08:02 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|0
5d46c1f
Sat 22 Apr 2023 09:22:13 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
b0fb168
Sat 22 Apr 2023 09:24:30 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
60b45ff
Sat 22 Apr 2023 10:20:45 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
36cd948
Sat 22 Apr 2023 11:48:08 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:237:13: error: unused variable ‘keyMayor’ [-Werror=unused-variable]
  237 |   TreeNode *keyMayor;
      |             ^~~~~~~~
treemap.c:236:13: error: unused variable ‘aux’ [-Werror=unused-variable]
  236 |   TreeNode *aux;
      |             ^~~
treemap.c:247:1: error: control reaches end of non-void function [-Werror=return-type]
  247 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c457fe4
Sat 22 Apr 2023 11:48:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:237:13: error: unused variable ‘keyMayor’ [-Werror=unused-variable]
  237 |   TreeNode *keyMayor;
      |             ^~~~~~~~
treemap.c:236:13: error: unused variable ‘aux’ [-Werror=unused-variable]
  236 |   TreeNode *aux;
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
83c9173
Sat 22 Apr 2023 11:48:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  26|1
total_score: 60/70
cd3bdb0
Sat 22 Apr 2023 11:53:21 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:237:13: error: unused variable ‘keyMayor’ [-Werror=unused-variable]
  237 |   TreeNode *keyMayor;
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e9813e2
Sun 23 Apr 2023 12:00:08 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:250:81: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  250 |     if(keyMayor == NULL ||tree->lower_than(aux->pair->key, keyMayor->pair->key) && tree->lower_than(key, aux->pair->key))
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:255:8: error: expected expression before ‘)’ token
  255 |     if()
      |        ^
cc1: all warnings being treated as errors
Compilation failed
736abe5
Sun 23 Apr 2023 12:00:14 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:250:81: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  250 |     if(keyMayor == NULL ||tree->lower_than(aux->pair->key, keyMayor->pair->key) && tree->lower_than(key, aux->pair->key))
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:250:68: error: ‘keyMayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  250 |     if(keyMayor == NULL ||tree->lower_than(aux->pair->key, keyMayor->pair->key) && tree->lower_than(key, aux->pair->key))
      |                                                            ~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8a5600e
